syntax = "proto3";

package data_cleaner.api.v1;

option go_package = "gen/grpc";

import "google/api/annotations.proto";
import "google/api/httpbody.proto";

message ImportRequest {
}

message ImportResponse {
  repeated Issue issues = 1;
  string completed_date = 2;
  int64 total_lines = 3;
  repeated SourceFile source_files = 4;
  repeated Transformation transformations = 5;
}

message Transformation {
  string name = 1;
  string description = 2;
}

message SourceFile {
  string filename = 1;
  int64 line_count = 2;
}

message Issue {
  string description = 1;

  repeated RowAttribute expected = 2;

  repeated RowAttribute actual = 3;
  repeated RowAttribute intermediate = 4;

  int64 current_location_line_number = 5;

  string current_location_filename = 6;

  string last_location_filename = 7;

  int64 last_location_line_number = 8;
}

message RowAttribute {
    string key = 1;
    string val = 2;
}

message ExportRequest {
  int64 not_null_columns = 1;
  bool run_import = 2;
}

message ReloadRequest {}

message ReloadResponse {}

message LoadRequest {
}

message LoadResponse {
}

service DataCleanerService {
	rpc Import(ImportRequest) returns (ImportResponse) {
		option (google.api.http) = {
			get: "/api/Import"
		};
	}

    rpc Export(ExportRequest) returns (google.api.HttpBody) {
        option (google.api.http) = {
            get: "/api/Export"
        };
    }

    rpc Reload(ReloadRequest) returns (ReloadResponse) {
        option (google.api.http) = {
            get: "/api/Reload"
        };
    }
    
    rpc Load(LoadRequest) returns (LoadResponse) {
        option (google.api.http) = {
            get: "/api/Load"
        };
    }
}
